# power-supply

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  dist-workspace.toml  dist.toml  payloads.fbs
.github/agents/: code.agent.md  code.rust.ratatui.agent.md  coding.agent.md  inspector.agent.md  leader.agent.md  module-specifier.agent.md  readme-mod-writer.agent.md  req.agent.md  requirement.agent.md  rules.agent.md  rules.cargo.agent.md  rules.rust.agent.md  specify.agent.md  story.agent.md  task-planner.agent.md  task.agent.md
.github/prompts/: coding-rules.apply.prompt.md  implement.prompt.md  michel.prompt.md  project.align-code.prompt.md  project.coder.prompt.md  project.inspect.prompt.md  project.specifier.prompt.md  specify.prompt.md
.github/workflows/: cargo-build-test.yml  release.yml
assets/: button_power.css  main.css
assets/control_box/: button_power.css
assets/css/: control_box.css  main.css  mcp_display.css  navbar.css
assets/css/control_box/: button_config.css  button_power.css  current_setter.css  instance_selector.css  voltage_setter.css
client/: Cargo.toml
client/src/: client.rs  config.rs  lib.rs
docs/: README.md  contributing.md  index.html  testing.md
docs/devices/: emulator.md  kd3005p.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/interfaces/: gui.md  mcp.md  mqtt.md
rules/: coding.rules.md  gui-component.rules.md  rust-coding-rules.md  specs-rules.md
server/: Cargo.toml
server/assets/: button_power.css  current_setter.css  device_selector.css  main.css  tailwind.css  voltage_setter.css
server/src/: config.rs  drivers.rs  factory.rs  gui.rs  main.rs  mcp.rs  mqtt_runner.rs  runner.rs
server/src/drivers/: emulator.rs  kd3005p.rs
server/src/gui/: button_power.rs  current_setter.rs  device_selector.rs  voltage_setter.rs
server/src/mcp/: server.rs  tools.rs
specs/: 0-constitution.md  5-tui.md
specs/0-general/: 1-reqs.md
specs/05-tui/: 0-stories.md  1-reqs.md  1-requirements.md  2-tasks.md  requirements.md  stories.md  tasks.md
specs/1-cli/: 0-stories.md  1-reqs.md  2-tasks.md
src/: README.md  broker.rs  cli.rs  client.rs  config.rs  constants.rs  drivers.rs  factory.rs  gui.rs  lib.rs  main.rs  path.rs  payload.rs  runner.rs  server.rs  topics.rs
src/cli/: README.md  mod.rs
src/client/: README.md  builder.rs  client.rs  config.rs  mod.rs
src/client/client/: builder.rs
src/constants/: mod.rs  topics.rs
src/drivers/: emulator.rs  hm310t.rs  kd3005p.rs
src/gui/: current_setter.rs  voltage_setter.rs
src/mcp/: tools.rs
src/payload/: README.md  current.rs  error.rs  mod.rs  payloads_generated.rs  power_state.rs  status.rs  voltage.rs
src/server/: README.md  factory.rs  gui.rs  instance.rs  mcp.rs  mod.rs  mqtt.rs  mqtt.rules.md  runtime.rs  services.rs  state.rs
src/server/cli/: README.md  mod.rs
src/server/config/: README.md  mcp.rs  mod.rs  path.rs  power_supply.rs  tui.rs
src/server/drivers/: emulator.rs  factory.rs  kd3005p.rs  mod.rs
src/server/gui/: button_power.rs  config_button.rs  control_box.rs  mcp_display.rs  navbar.rs  routes.rs
src/server/gui/control_box/: button_config.rs  button_power.rs  current_setter.rs  device_selector.rs  instance_selector.rs  voltage_setter.rs
src/server/gui/routes/: control.rs  control.rules.md  mcp.rs  mod.rs
src/server/mcp/: tools.rs
src/server/mqtt/: README.md  command_handler.rs  mod.rs  topic_suffix.rs
src/server/path/: mod.rs
src/server/services/: mod.rs
src/server/services/mcp/: mcp.rs  mod.rs  tools.rs
src/server/services/runners/: README.md  mod.rs  runner.rs
src/server/services/runners/runner/: README.md
src/server/services/state/: README.md  mod.rs
src/server/services/tui/: mod.rs  psi_widget.rs
src/server/services/tui/loading/: README.md  mod.rs
src/server/state/: mod.rs
src/server/tui/: README.md  mod.rs  psi_widget.rs
src/tui/: README.md  input.rs  layout.rs  mod.rs  render.rs  state.rs  tests.rs
tests/: cli.rs  mqtt.rs
wix/: main.wxs
