[package]
name = "pza-power-supply"
version = "0.1.1"
authors = ["XdoctorwhoZ <xavier.rodriguezalvarez@gmail.com>"]
edition = "2021"
description = "Panduza Power Supply - MQTT broker and device management"
repository = "https://github.com/Panduza/pza-power-supply"

[package.metadata.wix]
upgrade-guid = "C0480D1F-1DDB-4FA9-92BD-EA7616E557F3"
path-guid = "6F3F533A-6549-424D-BA75-1A31D70DB6B3"
license = false
eula = false

[dependencies]
# ---
# Zero-copy serialization library
flatbuffers = "25.9.23"
# ---
once_cell = "1.21.3"
# ---
# Trait for async functions in traits
async-trait = { version = "0.1.89" }
# ---
# HTTP web framework
axum = { version = "0.8", features = ["macros"] }
# ---
# Base64 encoding/decoding
base64 = "0.22"
# ---
# Byte manipulation utilities
bytes = "1.10.1"
# ---
# Configuration management
config = "0.15.17"
# ---
# Web framework for building user interfaces
dioxus = { version = "0.6.3", features = [] }
# ---
# Logging support for Dioxus
dioxus-logger = "0.6.2"
# ---
# Router for Dioxus applications
dioxus-router = "0.6.3"
# ---
# Platform directories lookup
dirs = "6.0.0"
# ---
# Futures utilities
futures = "0.3"
# ---
# Include directory contents at compile time
include_dir = "0.7"
# ---
# KD3005P Driver
ka3005p = "0.7.0"
# ---
# Local toolkit dependency
pza-toolkit = { path = "../toolkit" }
# pza-toolkit = { git = "https://github.com/Panduza/toolkit", tag = "0.1.1" }
# ---
# Random string generator
rand = "0.8.5"
# ---
# Model Context Protocol implementation
rmcp = { version = "0.7.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
# ---
# MQTT async client
rumqttc = "0.25.0"
# ---
# MQTT Broker
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
# ---
# JSON schema generation
schemars = "1.0"
# ---
# Serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
# ---
# JSON serialization/deserialization
serde_json = "1.0"
# ---
# JSON5 serialization/deserialization
serde_json5 = "0.2.1"
# ---
# Error handling library
thiserror = "2.0.17"
# ---
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
# ---
# Clipboard access for desktop apps
arboard = "3.4"
# ---
# HTTP middleware for Tower
tower-http = { version = "0.6", features = ["cors"] }
# ---
# Application-level tracing
tracing = "0.1.37"
# ---
# Utilities for tracing subscribers
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# ---
# URL parsing
url = "2.4"
# ---
# UUID generation and parsing
uuid = { version = "1.6", features = ["v4", "serde"] }

anyhow = "1.0.100"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
