[package]
name = "pza-power-supply"
version = "0.1.1"
authors = ["XdoctorwhoZ <xavier.rodriguezalvarez@gmail.com>"]
edition = "2021"
description = "Panduza Power Supply - Control Multi-Server for Power Supplies"
repository = "https://github.com/Panduza/pza-power-supply"

[[bin]]
name = "pza-power-supply"
path = "src/main.rs"

[lib]
name = "pza_power_supply_client"
path = "src/lib.rs"

[dependencies]

# ---
# Error handling library
anyhow = "1.0.100"
# ---
# Clipboard access for desktop apps
arboard = "3.4"
# ---
# Trait for async functions in traits
async-trait = { version = "0.1.89" }
# ---
# HTTP web framework
axum = { version = "0.8", features = ["macros"] }
# ---
# Base64 encoding/decoding
base64 = "0.22"
# ---
# Byte manipulation utilities
bytes = "1.10.1"
# ---
# Command line argument parser
clap = { version = "4.1.8", features = ["derive"] }
# ---
# Configuration management
config = "0.15.17"
# ---
# Cross-platform terminal control
crossterm = "0.29.0"
# ---
# Platform directories lookup
dirs = "6.0.0"
# ---
# Futures utilities
futures = "0.3"
# ---
# Include directory contents at compile time
include_dir = "0.7"
# ---
# KD3005P Driver
ka3005p = "0.7.0"
# ---
# Thread-safe lazy static variables
once_cell = "1.21.3"
# ---
# Panduza toolkit dependency
# pza-toolkit = { git = "https://github.com/Panduza/toolkit", tag = "0.1.1" }
pza-toolkit = { git = "https://github.com/Panduza/toolkit", branch = "main" }
# pza-toolkit = { path = "../toolkit" }
# ---
# Random string generator
rand = "0.8.5"
# ---
# Terminal UI library
ratatui = "0.29"
# ---
# Model Context Protocol implementation
rmcp = { version = "0.7.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
# ---
# MQTT async client
rumqttc = "0.25.0"
# ---
# MQTT Broker
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
# ---
# JSON schema generation
schemars = "1.0"
# ---
# Serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
# ---
# JSON serialization/deserialization
serde_json = "1.0"
# ---
# JSON5 serialization/deserialization
serde_json5 = "0.2.1"
# ---
# Error handling library
thiserror = "2.0.17"
# ---
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
# ---
# HTTP middleware for Tower
tower-http = { version = "0.6", features = ["cors"] }
# ---
# Application-level tracing
tracing = "0.1.37"
# ---
# Utilities for tracing subscribers
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# ---
# URL parsing
url = "2.4"
# ---
# UUID generation and parsing
uuid = { version = "1.6", features = ["v4", "serde"] }
