[package]
name = "panduza-power-supply-server"
version = "0.1.0"
authors = ["XdoctorwhoZ <xavier.rodriguezalvarez@gmail.com>"]
edition = "2021"
description = "Panduza Power Supply Server - MQTT broker and device management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Server-specific dependencies
dioxus = { version = "0.6.3", features = [] }
dirs = "6.0.0"
serde_json5 = "0.2.1"
dioxus-logger = "0.6.2"

# ---
# Random string generator
rand = "0.8.5"
# ---
# MQTT async client
rumqttc = "0.25.0"
# ---
# MQTT Broker
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
# ---
# Config for rumqttd
config = "0.15.17"
# ---
bytes = "1.10.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
